# -surgical-instrument-digital-twin

./: .gitignore  README.md  requirements.txt  verify_detections.py
launch/: start_pipeline.sh
models/gazebo/surgical_instrument/: model.config  model.sdf
ros2_ws/src/surgical_perception/: package.xml  setup.py
ros2_ws/src/surgical_perception/surgical_perception/: perception_node.py  pose_estimator.py  stereo_depth_node.py  twin_sync_node.py  video_publisher.py
